Fixed overflow on mobile and header logo size

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -11,6 +11,7 @@ body {
   font-family: 'Roboto', sans-serif;
   color: #333;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 img {
