--- a/app/assets/styles/modules/_grid.css
+++ b/app/assets/styles/modules/_grid.css
@@ -29,7 +29,7 @@
 
   &--2-large {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
   
   @mixin atMedium {
