--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -1,5 +1,5 @@
 .section-title {
-  font-size: 4.5rem;
+  font-size: 3.5rem;
   font-weight: 300;
   text-align: center;
   margin-top: 0;
