--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -5,7 +5,7 @@
   padding: 1rem 0;
   transition: all .3s ease;
   background-color: rgba(47, 85, 114, .3);
-  height: 47px;
+  height: 45px;
   backdrop-filter: blur(3px);
   
   @mixin atMedium {
@@ -32,7 +32,8 @@
     z-index: 15;
     
     .site-header--dark & {
-      transform: translateX(-50%) translateY(-25%) scale(.54);
+      background-color: unset;
+      transform: translateX(-50%) translateY(-23%) scale(.54);
     }
     
     @mixin atMedium {
@@ -50,7 +51,7 @@
     position: absolute;
     width: 20px;
     height: 20px;
-    top: 15px;
+    top: 12px;
     right: 20px;
     cursor: pointer;
     z-index: 10;
